--- a/package.json
+++ b/package.json
@@ -5,21 +5,21 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-scripts": "^5.0.0",
-    "react-router-dom": "6.22.1",
+    "@emailjs/browser": "4.3.1",
     "@fortawesome/fontawesome-free": "6.5.1",
-    "fontawesome": "5.6.3",
     "@fortawesome/fontawesome-svg-core": "6.5.1",
     "@fortawesome/free-brands-svg-icons": "6.5.1",
-    "@fortawesome/react-fontawesome": "0.2.0",
     "@fortawesome/free-solid-svg-icons": "6.5.1",
-    "@emailjs/browser": "4.3.1",
+    "@fortawesome/react-fontawesome": "0.2.0",
+    "fontawesome": "5.6.3",
+    "react": "^18.0.0",
+    "react-calendly": "4.3.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "6.22.1",
+    "react-scripts": "^5.0.1",
     "validator": "13.11.0",
-    "validatorjs": "3.22.1",
     "validator.js": "2.0.4",
-    "react-calendly": "4.3.0"
+    "validatorjs": "3.22.1"
   },
   "devDependencies": {
     "@types/react": "18.2.38",
